Fri Aug 11 17:49:36 2000  Steve Huston  <shuston@riverace.com>

        * ace/TP_Reactor.cpp: Add #include "ace/Thread.h" to pick up the
          definition of ACE_Thread::self ().

Fri Aug 11 16:24:13 2000  Shawn Hannan  <hannan@tango.cs.wustl.edu>

	* ace/OS.i: For VXWORKS, changed checks of errno against
	  S_objLib_OBJ_TIMEOUT to S_objLib_OBJ_UNAVAILABLE after calls
	  to semTake with timeout parameter set to NO_WAIT (i.e., 0).  
	  semTake will set errno to _UNAVAILABLE, not _TIMEOUT, if
 	  the semaphore is empty and the timeout parameter is 0.
	  Thanks to Peter Fischer <fischer@softec.de> for reporting
	  this.

Fri Aug 11 13:20:40 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* apps/gperf/src/gperf_lib.dsp: Changed the format for generated
	  debug info from C7 to "Program Database" to conform to rest of
	  the ACE project files.  Thanks to Espen Harlinn
	  <espen.harlinn@seamos.no> for reporting this.

Fri Aug 11 11:06:30 2000  David L. Levine <levine@cs.wustl.edu>

        * include/makeinclude/platform_osf1_4.0.GNU: moved
          -hidden /usr/lib/cmplrs/cxx/libcxxstd.a -non_hidden to end
          of link line by moving it from SOFLAGS to the end of LIBS.
          This allows links to succeed with -D__USE_STD_IOSTREAM.  Thanks
          to Jorn Jensen <jornj@funcom.com> for finding this solution to
          the link problem, and to Michael Kramer <kramer@ave.ac.agit.de>
          for verifying that it works.

Fri Aug 11 07:40:10 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

        * ace/WFMO_Reactor.cpp (open): Removed an unnecessary ACE_UNUSED_ARG(sh).
          Thanks to Pedro Brandao <pbrandao@inescn.pt> for reporting this.

Thu Aug 10 12:22:31 2000  Steve Huston  <shuston@riverace.com>

        * ace/Svc_Handler.h (close): Added some comments to help make this
          function easier to understand.

Thu Aug 10 12:15:16 2000  Steve Huston  <shuston@riverace.com>

        * ace/POSIX_Proactor.(h cpp) (ACE_POSIX_AIOCB_Proactor): Surround